# Slicer

./: CMakeLists.txt  README.md  README.txt  SuperBuild.cmake  circle.yml
Applications/SlicerApp/: Main.cxx
Base/CLI/: CMakeLists.txt
Base/Logic/: vtkSlicerScriptedLoadableModuleLogic.cxx
Base/Python/: mrml.py  saferef.py  sitkUtils.py
Base/Python/slicer/: ScriptedLoadableModule.py  __init__.py  cli.py  slicerqt-with-tcl.py  slicerqt.py  testing.py  util.py
Base/Python/tests/: test_saferef.py  test_sitkUtils.py
Base/Python/tpycl/: __init__.py  tpycl.py
Base/QTApp/: qSlicerApplicationHelper.cxx
Base/QTCLI/Testing/: PyCLIModule4Test.py
Base/QTCore/: qSlicerCoreApplication.cxx  qSlicerCoreCommandOptions.cxx  qSlicerCoreCommandOptions.h  qSlicerScriptedUtils.cxx
Base/QTGUI/: qSlicerApplication.cxx
CMake/: BundleUtilitiesWithRPath.cmake  GetPrerequisitesWithRPath.cmake  SlicerBlockInstallExternalPythonModules.cmake  SlicerBlockInstallPython.cmake  SlicerCMakeUtil.cmake
Extensions/CMake/: SlicerBlockAdditionalLauncherSettings.cmake
Extensions/CMake/Testing/: SlicerExtensionBuildSystemTest.py
Libs/MRML/Core/: vtkMRMLDisplayNode.cxx  vtkMRMLDisplayNode.h  vtkMRMLModelDisplayNode.cxx  vtkMRMLModelDisplayNode.h  vtkMRMLModelNode.cxx  vtkMRMLModelNode.h  (+1 more)
Libs/vtkTeem/: CMakeLists.txt  vtkNRRDWriter.cxx  vtkNRRDWriter.h
Modules/CLI/DiffusionTensorTest/: CMakeLists.txt
SuperBuild/: External_CTKAppLauncherLib.cmake  External_NUMPY.cmake  External_OpenIGTLinkIF.cmake  External_VTKv9.cmake  External_python.cmake
Testing/: ModelRender.py  TextureModel.py
(+169 files in other folders)
